<resources>
    <string name="settings">Settings</string>
    <string name="settings_passcode">almarakeb555</string>
    <string name="label_general">General</string>
    <string name="label_other">Others</string>
    <string name="menu_drone_setup">Drone Setup</string>
    <string name="remote_helm">Remote Helm</string>
    <string name="app_settings">App Settings</string>
    <string name="flight_data">Sail Data</string>
    <string name="editor">Sail Plan</string>
    <string name="upload_mission">Upload route</string>
    <string name="download_mission">Download route</string>
    <string name="selected">Selected</string>
    <string name="all">All</string>
    <string name="point_of_interest">Point Of Interest</string>
    <string name="screen_cal">Calibration</string>
    <string name="screen_checklist">Checklist</string>
    <string name="screen_parameters">Parameters</string>
    <string name="pref_connection_type">Telemetry Connection Type</string>
    <string name="pref_connection_type_summary">Which link to use to connect to the drone</string>
    <string name="pref_maps_title">Maps</string>
    <string name="pref_maps_providers_summary">Which map provider to use.</string>
    <string name="pref_maps_providers_title">Maps Providers</string>
    <string name="pref_ui">User Interface</string>
    <string name="pref_ui_language_english">English as UI Language</string>
    <string name="pref_ui_language_english_summary">Use English language (instead of system language). Requires app restart.</string>
    <string name="pref_keep_screen_bright">Keep Screen On</string>
    <string name="pref_keep_screen_bright_summary">Check to keep the screen on and bright (affect
        battery life)</string>
    <string name="pref_lock_screen_orientation">Lock Screen Orientation</string>
    <string name="pref_lock_screen_orientation_summary">Locks screen to the orientation which is present when connecting</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_map_type">Map Type</string>
    <string name="pref_map_type_summary">Which type of map to use</string>
    <string name="pref_tile_provider_title">Map Tile Provider</string>
    <string name="pref_tile_provider_google">Google</string>
    <string name="pref_tile_provider_mapbox">Mapbox</string>
    <string name="pref_tile_provider_arcgis">Offline Maps</string>
    <string name="pref_tile_provider_summary">Which map tile provider to use</string>
    <string name="pref_enable_tts">Enable Speech output</string>
    <string name="pref_enable_tts_summary">Audible messages for important events</string>
    <string name="pref_request_max_volume">Set Volume To Max On Start</string>
    <string name="pref_connection">Connection Preferences</string>
    <string name="pref_connection_subtitle">USB, TCP and UDP settings</string>
    <string name="pref_usb">USB Connection Settings</string>
    <string name="pref_baud_type">Telemetry link speed</string>
    <string name="pref_baud_type_summary">Baud Rate of the USB Telemetry Link</string>
    <string name="pref_server">TCP Connection Settings</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_port">Server Port</string>
    <string name="pref_server_udp">UDP Connection Settings</string>
    <string name="pref_udp_server_port">UDP Server Port</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="user_autopan_long_press">Long press to activate user auto panning.</string>
    <string name="drone_autopan_long_press">Long press to activate drone auto panning.</string>
    <string name="drone_no_location">Autopilot location not found</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="button_setup_calibrate">Calibrate</string>
    <string name="button_setup_cancel">Cancel</string>
    <string name="button_setup_send">Send</string>
    <string name="button_setup_next">Next</string>
    <string name="button_setup_done">Done</string>
    <string name="select_file_to_open">Select file to open:</string>
    <string name="no_files">No files</string>
    <string name="error_when_opening_file">Error when opening file</string>
    <string name="status_file_opened">File opened</string>
    <string name="distance_between_lines">Lateral</string>
    <string name="footprint">Footprint</string>
    <string name="ground_resolution">GSD</string>
    <string name="distance_between_pictures">Longitudinal</string>
    <string name="area">Area</string>
    <string name="camera_">Camera:</string>
    <string name="hatch_angle">Hatch angle:</string>
    <string name="flight_altitude">Flight Altitude:</string>
    <string name="overlap">Overlap:</string>
    <string name="sidelap">Sidelap:</string>
    <string name="mission_length">Grid Length</string>
    <string name="pictures">Pictures</string>
    <string name="number_of_strips">Number of Strips</string>
    <string name="draw_the_survey_region">Draw the survey region</string>
    <string name="mode_acro">Acro allows a pilot to control rate of rotation directly.</string>
    <string name="mode_althold">Alt Hold automatically controls throttle and maintains altitude. Does not require GPS.</string>
    <string name="mode_auto">Auto follows the scripted mission stored on the vehicle.</string>
    <string name="mode_circle">Circle rotates the vehicle around a point of interest. The vehicle will always point toward the center. Requires GPS lock.</string>
    <string name="mode_drift">Drift combines roll and yaw to produce a more natural and intuitive flight. Requires GPS lock.</string>
    <string name="mode_guided">Guided enables position control from a ground station. Requires GPS lock.</string>
    <string name="mode_land">Land at the current location. Requires GPS lock.</string>
    <string name="mode_loiter">Loiter allows the pilot to fly completely through GPS.</string>
    <string name="mode_rtl">RTL rises to the minimum altitude, returns to the home location and lands. Requires GPS lock.</string>
    <string name="mode_sport">Sport allows a pilot to control rate of rotation directly with the addition of self-leveling.</string>
    <string name="mode_stabilize">Stabilize levels the vehicle in flight.</string>
    <string name="mode_poshold">PosHold allows position hold (GPS) with direct response to pilot input.</string>
    <string name="mode_follow">The vehicle follows the user based on the device GPS location.</string>
    <string name="waypointType_Waypoint">Waypoint</string>
    <string name="waypointType_SplineWaypoint">Spline Waypoint</string>
    <string name="waypointType_TakeOff">Takeoff</string>
    <string name="waypointType_RTL">Return To Launch</string>
    <string name="waypointType_Land">Land</string>
    <string name="waypointType_Change_Speed">Change Speed</string>
    <string name="waypointType_Condition_Yaw">Set Yaw</string>
    <string name="waypointType_Camera_Trigger">Camera Trigger</string>
    <string name="waypointType_Set_Servo">Set Servo</string>
    <string name="waypointType_EPM">EPM</string>
    <string name="waypointType_Circle">Circle</string>
    <string name="waypointType_Loiter">Loiter</string>
    <string name="waypointType_ROI">Region of Interest</string>
    <string name="waypointType_ResetROI">Reset ROI</string>
    <string name="waypointType_Survey">Survey</string>
    <string name="waypointType_Spline_Survey">Spline Survey</string>
    <string name="waypointType_BuildingMapper">Structure Scan</string>
    <string name="waypointInfo_Land">Land vehicle at the current location. You must manually exit Auto mode to disarm motors.</string>
    <string name="waypointInfo_LoiterN">Orbit the current location for the desired number of turns.</string>
    <string name="waypointInfo_LoiterT">Hold the current location for the desired number of seconds or indefinitely to end the mission.</string>
    <string name="waypointInfo_RTL">Send the vehicle to the home location set when armed. An altitude of 0 will return to home at the RTL altitude parameter.</string>
    <string name="waypointInfo_TakeOff">Lift off from the ground to the specified altitude before proceeding to the next waypoint.</string>
    <string name="waypointInfo_Waypoint">Travel to a position in 3D space. Optional delay (in seconds) to hold position.</string>
    <string name="waypointInfo_CondYaw">Set condition to reach a certain target angle.</string>
    <string name="waypointInfo_SetSpeed">Change vehicle speed until the end of this mission.</string>
    <string name="waypointInfo_CameraTrigger">Trigger the camera shutter at regular distance intervals.</string>
    <string name="waypointInfo_SetServo">Move a servo to a particular PWM value.</string>
    <string name="waypointInfo_EpmGrabber">Release the payload of the EPM grabber</string>
    <string name="waypointInfo_ROI">Sets a location and altitude to point copter towards and to aim an optional camera.</string>
    <string name="waypointType_Do_Jump">Do Jump</string>
    <string name="waypointInfo_DoJump">Jump to a specific waypoint.</string>
    <string name="pwm">PWM</string>
    <string name="repeat_count">Repeat Count</string>
    <string name="editor_err_land_rtl_added">One cannot add new waypoints after LAND or RTL</string>
    <string name="editor_info_window">Distance: 0m, Flight time: 0:00</string>
    <string name="editor_info_window_distance">Distance: %s</string>
    <string name="editor_info_window_flight_time">Flight Time: %1$02d:%2$02d</string>
    <string name="editor_info_window_heading">Heading: %.0f°</string>
    <string name="distance_to_home">Distance to home</string>
    <string name="loiter_time">Loiter Time</string>
    <string name="waypoint_delay">Delay before next waypoint</string>
    <string name="circle_radius">Circle Radius</string>
    <string name="waypoint_longitude">Longitude: %f°</string>
    <string name="waypoint_latitude">Latitude: %f°</string>
    <string name="circle_turns">Number of turns</string>
    <string name="structure_scan_description">Map a building</string>
    <string name="structure_scan_start_alt">Start altitude</string>
    <string name="structure_scan_step_height">Step height</string>
    <string name="stucture_scanner_cross_hatch">Cross Hatch</string>
    <string name="dlg_clear_mission_title">Clear route</string>
    <string name="dlg_clear_mission_confirm">Clear all waypoints from the map?</string>
    <string name="menu_map_type_satellite">Satellite</string>
    <string name="default_angle_value">Heading: --°</string>
    <string name="next_wp_value">Next WP: --</string>
    <string name="wp_distance_value">Distance: --</string>
    <string name="empty_content" translatable="false">--</string>
    <string name="upload">Upload</string>
    <string name="label_cancel">Cancel</string>
    <string name="horizontal_speed_empty">Speed: —</string>
    <string name="warning_message">DO NOT OPERATE IN WATER CHANNELS, MARINAS OR SHALLOW AREAS. \nNEVER LEAVE HELM UNATTENDED.</string>
    <string name="warning"><u>WARNING</u></string>
    <string name="agree">AGREE</string>
    <string name="select_unit"><u>Select a unit:</u></string>
    <string name="big_unit"><u>Big unit:</u></string>
    <string name="small_unit"><u>Small unit:</u></string>
    <string name="kts">kts</string>
    <string name="kph">kph</string>
    <string name="mph">mph</string>
    <string name="ft_unit">ft</string>
    <string name="m_unit">m</string>
    <string name="nm_unit">NM</string>
    <string name="km_unit">km</string>
    <string name="confirm_route">Confirm Route</string>
    <string name="upload_new_route">Do you want to upload your new route to the autopilot?</string>
    <string name="dont_upload">Don\'t upload</string>
</resources>