<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:foreground="?android:selectableItemBackground"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="1dp"
    card_view:contentPadding="15dp">


        <LinearLayout
            android:id="@+id/lin_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColor="@color/all_black"
                    android:text="@string/confirm_route"
                    android:textSize="22sp"
                    />



            </RelativeLayout>

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_new_route"
                android:textColor="@color/all_black"
                android:textSize="14sp"
                android:paddingTop="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:paddingTop="10dp"
                >
                <Button
                    android:id="@+id/upload_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColor="@color/medium_green"
                    android:text="@string/upload"
                    android:textAllCaps="true"
                    />
                <Button
                    android:id="@+id/dont_upload_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     android:textColor="@color/medium_green"
                    android:text="@string/dont_upload"
                    android:textAllCaps="true"
                    />

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/label_cancel"
                    android:textColor="@color/medium_green"
                    android:textAllCaps="true" />



            </LinearLayout>



        </LinearLayout>

</android.support.v7.widget.CardView>
