<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@android:color/transparent"
>

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center_horizontal">-->

        <!--<TextView-->
            <!--android:id="@+id/yawValueText"-->
            <!--style="@style/RPYtextLabels"-->
            <!--android:layout_width="55dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_marginBottom="2dp"-->
            <!--android:background="@drawable/round_rect_bg"-->
            <!--android:drawableLeft="@drawable/yaw_icon"-->
            <!--android:drawableStart="@drawable/yaw_icon"-->
            <!--android:focusable="true"-->
            <!--android:gravity="start|center_vertical"-->
            <!--android:text="@string/default_angle_value" />-->

        <!--<TextView-->
            <!--android:id="@+id/pitchValueText"-->
            <!--style="@style/RPYtextLabels"-->
            <!--android:layout_width="55dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignLeft="@+id/yawValueText"-->
            <!--android:layout_alignStart="@+id/yawValueText"-->
            <!--android:layout_below="@+id/yawValueText"-->
            <!--android:layout_marginBottom="2dp"-->
            <!--android:background="@drawable/round_rect_bg"-->
            <!--android:drawableLeft="@drawable/pitch_icon"-->
            <!--android:drawablePadding="2dp"-->
            <!--android:drawableStart="@drawable/pitch_icon"-->
            <!--android:gravity="start|center_vertical"-->
            <!--android:text="@string/default_angle_value" />-->

        <!--<TextView-->
            <!--android:id="@+id/rollValueText"-->
            <!--style="@style/RPYtextLabels"-->
            <!--android:layout_width="55dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignLeft="@+id/pitchValueText"-->
            <!--android:layout_alignStart="@+id/pitchValueText"-->
            <!--android:layout_below="@+id/pitchValueText"-->
            <!--android:layout_marginBottom="2dp"-->
            <!--android:background="@drawable/round_rect_bg"-->
            <!--android:drawableLeft="@drawable/roll_icon"-->
            <!--android:drawablePadding="2dp"-->
            <!--android:drawableStart="@drawable/roll_icon"-->
            <!--android:gravity="start|center_vertical"-->
            <!--android:text="@string/default_angle_value" />-->

        <!--<com.map.android.view.AttitudeIndicator-->
            <!--android:id="@+id/aiView"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:layout_alignBottom="@+id/rollValueText"-->
            <!--android:layout_alignTop="@+id/yawValueText"-->
            <!--android:layout_toEndOf="@+id/yawValueText"-->
            <!--android:layout_toRightOf="@+id/yawValueText"-->
            <!--tools:ignore="ContentDescription" />-->

    <!--</RelativeLayout>-->

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_margin="5dp"-->
        <!--android:background="@color/light_grey" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/white">
    <me.grantland.widget.AutofitTextView
        android:id="@+id/horizontal_speed_telem"
        style="@style/largeTelemetryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/debug_step_over"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/debug_step_over"
        android:singleLine="true"
        android:text="@string/horizontal_speed_empty"
        tools:text="Speed: 1000 mph"
        android:textSize="14sp"
        android:padding="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/light_grey" />

    <me.grantland.widget.AutofitTextView
        android:id="@+id/yawValueText"
        style="@style/largeTelemetryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/debug_step_out"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/debug_step_out"
        android:singleLine="true"
        android:text="@string/default_angle_value"
        tools:text="@string/default_angle_value"
        android:padding="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/light_grey" />

    <me.grantland.widget.AutofitTextView
        android:id="@+id/nextWPText"
        style="@style/largeTelemetryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/next_wp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/next_wp"
        android:singleLine="true"
        android:text="@string/next_wp_value"
        tools:text="@string/next_wp_value"
        android:padding="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/light_grey" />

    <me.grantland.widget.AutofitTextView
        android:id="@+id/wpDistanceText"
        style="@style/largeTelemetryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/distance_wp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/distance_wp"
        android:singleLine="true"
        android:text="@string/wp_distance_value"
        tools:text="@string/wp_distance_value"
        android:textSize="14sp"
        android:padding="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/speed_unit_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        tools:visibility="visible">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/all_black"
            android:text="@string/select_unit"
            android:textStyle="italic"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp" />
        <LinearLayout
            android:id="@+id/lst_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/kts_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="15sp"
                android:textColor="@color/all_black"
                android:padding="8dp"
                android:text="@string/kts"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey" />
        <LinearLayout
            android:id="@+id/lst2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/kph_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="15sp"
                android:textColor="@color/all_black"
                android:padding="8dp"
                android:text="@string/kph"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey" />
        <LinearLayout
            android:id="@+id/lst3_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/mph_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="15sp"
                android:textColor="@color/all_black"
                android:padding="8dp"
                android:text="@string/mph"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/distance_unit_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        tools:visibility="visible">
    <LinearLayout
            android:id="@+id/big_unit_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/all_black"
            android:text="@string/big_unit"
            android:textStyle="italic"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/nm_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="15sp"
                android:textColor="@color/all_black"
                android:padding="8dp"
                android:text="@string/nm_unit"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <TextView
                android:id="@+id/km_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="15sp"
                android:textColor="@color/all_black"
                android:padding="8dp"
                android:text="@string/km_unit"/>

        </LinearLayout>
        </LinearLayout>

    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/light_green" />
    <LinearLayout
        android:id="@+id/small_unit_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/all_black"
            android:text="@string/small_unit"
            android:textStyle="italic"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5">
                <TextView
                    android:id="@+id/m_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:textColor="@color/all_black"
                    android:padding="8dp"
                    android:text="@string/m_unit"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5">
                <TextView
                    android:id="@+id/ft_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textStyle="italic"
                    android:textSize="15sp"
                    android:textColor="@color/all_black"
                    android:padding="8dp"
                    android:text="@string/ft_unit"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>